# sparking-zero-irl

./: LICENSE  README.md  changelogs.md  hand_tracking.py  main.py  pose_tracking.py  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: describe-the-bug-here.md
configs/: app_config.json  computer_info.json
fun/: handinputexample.py  landmarks.py
modules/: app.py  config_loader.py  keyboard_actions.py  pose_tracker.py  position.py  sides.py
