[project]
name = "sparkingzero-irl"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Stephen", email = "stephenvdw.business@gmail.com"},
]
dependencies = ["opencv-python>=4.11.0.86", "mediapipe>=0.10.20", "numpy>=1.26.4", "pynput>=1.7.7"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "Zlib"}


[tool.pdm]
distribution = false
